# crc32

./: BUILDING.md  CMakeLists.txt  CMakePresets.json  Crc32.cpp  Crc32.h  Crc32.ino  Crc32Best.ino  Crc32Test.cpp  Crc32TestMultithreaded.cpp  Crc32cl.cpp  HACKING.md  Makefile  README.md  changelog.md  readme.md
.github/workflows/: base.yml  ci.yml  dockcross.yml  linux.yml  macos.yml  windows.yml
cmake/: install-config.cmake  install-rules.cmake  spell.cmake  variables.cmake
example/: CMakeLists.txt  crc32_test_multithreaded.cpp  crc32_test_singlethreaded.cpp  simple_c_example.c  simple_example.cpp
include/crc32/: crc32.h  crc32.hpp  crc32_var.h
source/: crc32.c  crc32.cpp  crc32_var.c
test/: CMakeLists.txt
test/source/: crc32_bench.cpp  crc32_test.cpp
tools/: dockcross-cmake-builder.sh  graphic.py  ninja-builder.sh
